tests/golden/expected/action_badstop.stdout.txt
Compile error: tests/fixtures/action_badstop.lamp:13: type error: stop value expects kind "outcome", got "int"
  13 | 	stop 5
    |  ^
